    - Role::OAuth doc patch by Doug Bell <doug@plainblack.com>
    - fixed: incompatibility between "since" and InflateObjects

3.13006 2010-06-18
    - test fix: bump the skip count for a new test in t/unicode.t for optional module

3.13005 2010-06-18
    - fixed: since (synthetic arg) filtering
    - fixed: don't use args for OAuth signature on multi-part mime posts

3.13004 2010-06-18
    - fixed: OAuth signature error with unicode args (RT#58493)

3.13003 2010-05-21
    - production release with Lists API refactor and OAuth changes

3.13002_03 2010-05-13
    - fixed: generate new OAuth authorization hearder on retry (RetryOnError trait)

3.13002_02 2010-05-12
    - fixed: removed redundant alias declarations

3.13002_01 2010-05-12
    - Refactored the Lists API to use Net::Twitter::API

3.13001 2010-11
    - use POST with Authorization header for XAuth (per Twitter documentation)
    - replace homegrown XAuth support with Net::OAuth's native support
    - accommodate 2 base URLs for API::Search (search and trends* methods use different base URLs)
    - enable SSL support for API::Search

3.13000 2010-05-09
    - added support and documentation for optional timeline parameter skip_user
    - fixed tests: plan was called twice when LWP was too old
    - added friends_incoming and friendships_outgoing methods

3.12000 2010-03-19
    - added new API methods: retweeted_by and retweeted_by_ids
    - fixed: t/51_since.t was actually connecting to twitter

3.11012 2010-03-13
    - fixed: added fallback since Test::More 0.95_01 does not stringify in "is" (tokuhirom)

3.11011 2010-03-11
    - fixed documentation to include lookup_users

3.11010 2010-03-11
    - Added lookup_users API method

3.11009 2010-03-10
    - Added RetryOnError trait (see perldoc Net::Twitter::Role::RetryOnError)
    - Import Sclar::Util::blessed in the POD Synopsis to make it clear callers need to do so (RT#55283)