@@ -9,7 +9,7 @@ use HTTP::Request::Common;
 use Net::Twitter::Error;
 use Scalar::Util qw/blessed reftype/;
 use List::Util qw/first/;
-use HTML::Entities;
+use HTML::Entities ();
 use Encode qw/encode_utf8/;
 use DateTime;
 use Data::Visitor::Callback;
@@ -163,19 +163,21 @@ sub _add_authorization_header {
 
 sub _send_request { shift->ua->request(shift) }
 
-# Twitter returns HTML encoded entities in the "text" field of status messages.
-# Decode them.
-sub _decode_html_entities {
-    my ($self, $obj) = @_;
+has _decode_html_entities_visitor => (
+    is      => 'rw',
+    lazy    => 1,
+    default => sub {
+        Data::Visitor::Callback->new(
+            plain_value => sub {
+                return unless defined $_;
 
-    if ( ref $obj eq 'ARRAY' ) {
-        $self->_decode_html_entities($_) for @$obj;
-    }
-    elsif ( ref $obj eq 'HASH' ) {
-        $self->_decode_html_entities($_) for values %$obj;
-        decode_entities($obj->{text}) if exists $obj->{text};
-    }
-}
+                $_ = HTML::Entities::decode_entities($_);
+            }
+        )
+    },
+);
+
+sub _decode_html_entities { shift->_decode_html_entities_visitor->visit(@_) }
 
 # By default, Net::Twitter does not inflate objects, so just return the
 # hashref, untouched. This is really just a hook for Role::InflateObjects.
