@@ -1,3 +1,4 @@
+    - decode_html_entities now decodes all fields (incl source in search results)
     - Role::OAuth doc patch by Doug Bell <doug@plainblack.com>
     - fixed: incompatibility between "since" and InflateObjects
 
